examples/test/testpolicy18138.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18138
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key25: value13
      key24: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value26
          key10: value33
      podSelector:
        matchLabels:
          key38: value0
          key29: value10
